<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="app_name">Chat Buddy</string>
    <string name="btn_login">Login</string>
    <string name="email">Email</string>
    <string name="pw">Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="btn_register">Register</string>
    <string name="str_label_btn_send">Send</string>
    <string name="str_menu_search_devices">Search Devices</string>
    <string name="str_menu_bluetooth_on">Switch on Bluetooth</string>
    <string name="str_paired_devices">Paired Devices</string>
    <string name="str_available_devices">Available Devices</string>
    <string name="str_menu_scan_devices">Scan Devices</string>
</resources>